--- a/htm/main.tex
+++ b/htm/main.tex
@@ -3,8 +3,7 @@
 
 
 \title{Hierarchical Temporal Memory}
-% \subtitle{And The Theory of Thousand Brains Intelligence}
-\subtitle{A Theoretical Framework for the Neocortex}
+\subtitle{Biological And Machine Intelligence}
 \author{Felix Karg}
 
 
@@ -23,23 +22,23 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % % \input{chapters/introduction}
-% \input{chapters/note}
+\input{chapters/note}
 \input{chapters/bio}
-% \input{chapters/overview}
+\input{chapters/overview}
 
-% \section{Core Concepts}
-% \input{chapters/hierarchies}
-% \input{chapters/sdr}
+\section{Core Concepts}
+\input{chapters/hierarchies}
+\input{chapters/sdr}
 
 \input{chapters/learning}
-% \input{chapters/spatial_pooling}
-% \input{chapters/temporal_pooling}
+\input{chapters/spatial_pooling}
+\input{chapters/temporal_pooling}
 
-% \input{chapters/implications}
+\input{chapters/implications}
 % 
 % % \input{chapters/recap}
 % 
-% \input{chapters/open}
+\input{chapters/open}
 
 
 
@@ -81,8 +80,7 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 % - explain 'top-down' phenomena and common biases
 % - explain theory: inhibited-booost: hallucination
 % - The datastructure of the brain
-%
-%
+
 % Roadmap (?)
 %
 % - First: What is Intelligence ? (Early path, why we want to know this and why this is the most likely path)
