--- a/htm/references.bib
+++ b/htm/references.bib
@@ -1,4 +1,4 @@
-% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human} \cite{figsidebrain} \cite{figcorticalcolumn} \cite{impact2015firing} \cite{yi2019average}
+% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human} \cite{figsidebrain} \cite{figcorticalcolumn} \cite{impact2015firing} \cite{yi2019average} \cite{hawkins2016book}
 
 
 @article{mengistu2016evolutionary,
@@ -89,4 +89,12 @@
   year = 1918,
   howpublished = {\url{https://en.wikipedia.org/wiki/File:Gray754.png}},
   Note = {Accessed 2019-08-24}
+}
+
+@unpublished{hawkins2016book,
+title={Biological and Machine Intelligence (BAMI)},
+author={Hawkins, J. and Ahmad, S. and Purdy, S. and Lavin, A.},
+note={Initial online release 0.4},
+url={http://numenta.com/biological-and-machine-intelligence/},
+year={2016}
 }
