--- a/htm/main.tex
+++ b/htm/main.tex
@@ -22,23 +22,23 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % % \input{chapters/introduction}
-\input{chapters/note}
-\input{chapters/bio}
-\input{chapters/overview}
+% \input{chapters/note}
+% \input{chapters/bio}
+% \input{chapters/overview}
 
-\section{Core Concepts}
-\input{chapters/hierarchies}
-\input{chapters/sdr}
+% \section{Core Concepts}
+% \input{chapters/hierarchies}
+% \input{chapters/sdr}
 
 \input{chapters/learning}
 \input{chapters/spatial_pooling}
 \input{chapters/temporal_pooling}
 
 \input{chapters/implications}
-% 
+
 % % \input{chapters/recap}
-% 
-\input{chapters/open}
+
+% \input{chapters/open}
 
 
 
@@ -65,13 +65,14 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 % \input{chapters/additional}
 
 
+
 \end{document}
 
 
 % TODO:
 
 % Include Topics/Facts:
-% 
+%
 % - explain SDRs
 % - explain spatial & temporal pooler
 % - explain HTM
@@ -94,7 +95,7 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 % - explain gradient for Einstein/Craziness, proving vs disproving in the brain -> THC is bad
 % - Mistakes that happen by top-down enforcing (e.g. the dalmatine picture, scrambled words)
 % - Location-based composition: This explains mind palaces!
-% - Everything is a 'conceptspace' - 
+% - Everything is a 'conceptspace' -
 
 % - Explain Priming based on predictive stuff (the priming-bias)
 % - Explain biases based on these models
@@ -104,4 +105,4 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 
 
 
-% 
+%
