upload complete version

--- a/htm/main.tex
+++ b/htm/main.tex
@@ -22,13 +22,13 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % % \input{chapters/introduction}
-% \input{chapters/note}
-% \input{chapters/bio}
-% \input{chapters/overview}
+\input{chapters/note}
+\input{chapters/bio}
+\input{chapters/overview}
 
-% \section{Core Concepts}
-% \input{chapters/hierarchies}
-% \input{chapters/sdr}
+\section{Core Concepts}
+\input{chapters/hierarchies}
+\input{chapters/sdr}
 
 \input{chapters/learning}
 \input{chapters/spatial_pooling}
@@ -38,7 +38,7 @@
 
 % % \input{chapters/recap}
 
-% \input{chapters/open}
+\input{chapters/open}
 
 
 
@@ -62,7 +62,7 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 \end{frame}
 
 
-% \input{chapters/additional}
+\input{chapters/additional}
 
 
 
