made handout more readable

--- a/htm/main.tex
+++ b/htm/main.tex
@@ -1,4 +1,5 @@
-\documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames]{beamer}
+% \documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames]{beamer}
+\documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames,handout]{beamer}
 \usepackage[ngerman, english,main=english]{babel}
 
 
