added a lot about spatial pooler

--- a/htm/references.bib
+++ b/htm/references.bib
@@ -1,4 +1,4 @@
-% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human} \cite{figsidebrain} \cite{figcorticalcolumn} \cite{impact2015firing} \cite{yi2019average} \cite{hawkins2016book}
+% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human} \cite{figsidebrain} \cite{figcorticalcolumn} \cite{impact2015firing} \cite{yi2019average} \cite{hawkins2017book} \cite{cui2017htm}
 
 
 @article{mengistu2016evolutionary,
@@ -91,10 +91,22 @@
   Note = {Accessed 2019-08-24}
 }
 
-@unpublished{hawkins2016book,
+@unpublished{hawkins2017book,
 title={Biological and Machine Intelligence (BAMI)},
 author={Hawkins, J. and Ahmad, S. and Purdy, S. and Lavin, A.},
-note={Initial online release 0.4},
+note={Online release 0.5 (March 2017)},
 url={http://numenta.com/biological-and-machine-intelligence/},
-year={2016}
+year={2017}
 }
+
+@article{cui2017htm,
+  title={The HTM spatial pooler—A neocortical algorithm for online sparse distributed coding},
+  author={Cui, Yuwei and Ahmad, Subutai and Hawkins, Jeff},
+  journal={Frontiers in computational neuroscience},
+  volume={11},
+  pages={111},
+  year={2017},
+  publisher={Frontiers}
+}
+
+
