--- a/htm/references.bib
+++ b/htm/references.bib
@@ -1,4 +1,4 @@
-% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human} \cite{figsidebrain} \cite{figcorticalcolumn} \cite{impact2015firing} \cite{yi2019average} \cite{hawkins2017book} \cite{cui2017htm}
+% \cite{mengistu2016evolutionary} \cite{purdy2016encoding} \cite{herculano2009human} \cite{figsidebrain} \cite{figcorticalcolumn} \cite{impact2015firing} \cite{yi2019average} \cite{hawkins2017book} \cite{cui2017htm} \cite{hawkins2016neurons}
 
 
 @article{mengistu2016evolutionary,
@@ -92,11 +92,11 @@
 }
 
 @unpublished{hawkins2017book,
-title={Biological and Machine Intelligence (BAMI)},
-author={Hawkins, J. and Ahmad, S. and Purdy, S. and Lavin, A.},
-note={Online release 0.5 (March 2017)},
-url={http://numenta.com/biological-and-machine-intelligence/},
-year={2017}
+  title={Biological and Machine Intelligence (BAMI)},
+  author={Hawkins, J. and Ahmad, S. and Purdy, S. and Lavin, A.},
+  note={Online release 0.5 (March 2017)},
+  url={http://numenta.com/biological-and-machine-intelligence/},
+  year={2017}
 }
 
 @article{cui2017htm,
@@ -106,6 +106,16 @@ year={2017}
   volume={11},
   pages={111},
   year={2017},
+  publisher={Frontiers}
+}
+
+@article{hawkins2016neurons,
+  title={Why neurons have thousands of synapses, a theory of sequence memory in neocortex},
+  author={Hawkins, Jeff and Ahmad, Subutai},
+  journal={Frontiers in neural circuits},
+  volume={10},
+  pages={23},
+  year={2016},
   publisher={Frontiers}
 }
 
