--- a/htm/devel_main.tex
+++ b/htm/devel_main.tex
@@ -8,7 +8,7 @@
 \author{Felix Karg}
 
 
-\graphicspath{ {../template/} {./graphics/} {../template_tex/} } % add further graphics paths here
+\graphicspath{ {../template/} {./graphics/} {./graphics/temporal/} {../template_tex/} } % add further graphics paths here
 
 
 \input{setup}
@@ -32,12 +32,13 @@
 % \input{chapters/sdr}
 % 
 % \input{chapters/learning}
-\input{chapters/spatial_pooling}
-\input{chapters/temporal_pooling}
+% \input{chapters/spatial_pooling}
+% \input{chapters/temporal_pooling}
+
+\input{chapters/recap}
 
 \input{chapters/implications}
 
-% % \input{chapters/recap}
 
 % \input{chapters/open}
 
