--- a/htm/main.tex
+++ b/htm/main.tex
@@ -1,5 +1,5 @@
 % \documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames]{beamer}
-\documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames,handout]{beamer}
+\documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames]{beamer}
 \usepackage[ngerman, english,main=english]{babel}
 
 
@@ -8,7 +8,7 @@
 \author{Felix Karg}
 
 
-\graphicspath{ {../template/} {./graphics/} {../template_tex/} } % add further graphics paths here
+\graphicspath{ {../template/} {./graphics/temporal/} {./graphics/} {../template_tex/} } % add further graphics paths here
 
 
 \input{setup}
@@ -35,9 +35,9 @@
 \input{chapters/spatial_pooling}
 \input{chapters/temporal_pooling}
 
+\input{chapters/recap}
 \input{chapters/implications}
 
-% % \input{chapters/recap}
 
 \input{chapters/open}
 
