semi-final version

--- a/htm/main.tex
+++ b/htm/main.tex
@@ -36,10 +36,11 @@
 \input{chapters/temporal_pooling}
 
 \input{chapters/recap}
+% \input{chapters/grid_cells}
 \input{chapters/implications}
 
 
-\input{chapters/open}
+% \input{chapters/open}
 
 
 
@@ -74,21 +75,13 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 
 % Include Topics/Facts:
 %
-% - explain SDRs
-% - explain spatial & temporal pooler
-% - explain HTM
 % - explain reticular activating system
 % - explain gradient for Autism and that it is more 'bottom up'
 % - explain 'top-down' phenomena and common biases
-% - explain theory: inhibited-booost: hallucination
-% - The datastructure of the brain
+% - explain theory: inhibited-boost: hallucination
 
 % Roadmap (?)
 %
-% - First: What is Intelligence ? (Early path, why we want to know this and why this is the most likely path)
-% - Introduce the biological neuron we will be talking about (multiple dendrites, one axon, ...)
-% - Introduce (SDR) Sparse Distributed Representations, in-Depth
-% - Introduce the CLA
 % - Introduce HTMv3 !
 % - Motor movements are just very strong predictions the body 'makes happen'
 %   - Flow state is where everything is exactly as predicted
@@ -103,7 +96,9 @@ Drop me a mail: fkarg10@gmail.com \vfill \newpage
 % - Explain the fact that smarter people have less Brain activity
 % - Explain the bayesian-reasioning part
 % - Explain how cortical columns create quite powerful models
-
+% - Phantom limb 'pain' -> boosting
+% - AHA-Moment (aligning models, ceasing bursting)
+% - requiring more resources during learning
 
 
 %
