--- a/htm/main.tex
+++ b/htm/main.tex
@@ -57,7 +57,9 @@
     \Large
     \vfill
 The slides are online: \url{https://github.com/fkarg/things-to-talk-about/blob/master/htm/main.pdf} \vfill
-Drop me a mail: fkarg10@gmail.com \vfill \newpage
+Drop me a mail: fkarg10@gmail.com \vfill 
+Content mainly from \cite{hawkins2017book} \vfill
+    \newpage
 % \bibliographystyle{plainnat}
 \bibliographystyle{ieeetr}
 \bibliography{references.bib}
