--- a/htm/main.tex
+++ b/htm/main.tex
@@ -1,5 +1,4 @@
-% \documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames]{beamer}
-\documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames]{beamer}
+\documentclass[12pt,compress,english,utf8,t,usenames,dvipsnames,handout]{beamer}
 \usepackage[ngerman, english,main=english]{babel}
 
 
@@ -58,7 +57,7 @@
     \vfill
 The slides are online: \url{https://github.com/fkarg/things-to-talk-about/blob/master/htm/main.pdf} \vfill
 Drop me a mail: fkarg10@gmail.com \vfill 
-Content mainly from \cite{hawkins2017book} \vfill
+Content mainly from \cite{hawkins2017book}. \vfill
     \newpage
 % \bibliographystyle{plainnat}
 \bibliographystyle{ieeetr}
