--- a/htm/main.tex
+++ b/htm/main.tex
@@ -55,7 +55,7 @@
 \begin{frame}[c,fragile,allowframebreaks]{Sources}
     \Large
     \vfill
-The slides are online: \url{https://github.com/fkarg/things-to-talk-about/blob/master/htm/main.pdf} \vfill
+The slides are online: \url{https://git.io/JeYPO} \vfill
 Drop me a mail: fkarg10@gmail.com \vfill 
 Content mainly from \cite{hawkins2017book}. \vfill
     \newpage
@@ -102,4 +102,18 @@ Content mainly from \cite{hawkins2017book}. \vfill
 % - requiring more resources during learning
 
 
-%
+
+% Main Feedback:
+% 
+% Detailed introduction, but bring the dots together earlier.
+% Have more of a 'red line' through all of this.
+%   -> maybe kind of start with HTM pipeline and take it from there
+%   -> for technical audience, less explanation for combinatorics/sdr is needed
+%   -> maybe gloss over a lot of things in the beginning, start with results
+%       and work back from implications, how they actually work
+%       (after having explained the basic pipeline)
+% TODO: put this feedback in v2 of this presentation.
+
+
+
+
