--- a/template_tex/setup.tex
+++ b/template_tex/setup.tex
@@ -16,10 +16,10 @@
 % \date{12. Juli 2019}
 
 
-\institute{University of Freiburg}
-\titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{Logo-Uni-Freiburg.png}}
+\institute{Karlsruhe Institute of Technology}
+\titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2cm]{Logo_KIT}}
 
-
+\iftwocols
 \AtBeginSection[]
 {
     \large
@@ -42,16 +42,26 @@
     \end{frame}
 }
 
+\else
 
-
-\newcommand{\code}[1]{
-    \begin{center}
-    \setlength{\fboxrule}{1pt}
-    \setlength{\fboxsep}{8pt}
-        {\fbox{\parbox{0.81\textwidth}{#1}}}
-   \end{center}
+\AtBeginSection[]
+{
+    \large
+    \begin{frame}{Content}
+        \tableofcontents[currentsection]
+        \clearpage
+    \end{frame}
 }
 
+\AtBeginSubsection[]
+{
+    \large
+    \begin{frame}{Content}
+        \tableofcontents[currentsection,currentsubsection]
+        \clearpage
+    \end{frame}
+}
+\fi
 
 
 \begin{document}
@@ -63,6 +73,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\iftwocols
 \begin{frame}{Content}
     \large
     \begin{multicols}{2}
@@ -72,6 +83,24 @@
     % \clearpage
 \end{frame}
 
+\else
+
+\begin{frame}{Content}
+    \large
+%   \tableofcontents[hidesubsections]
+    \tableofcontents[]
+    % \clearpage
+\end{frame}
+\fi
+
+
+\newcommand{\code}[1]{
+    \begin{center}
+    \setlength{\fboxrule}{1pt}
+    \setlength{\fboxsep}{8pt}
+        {\fbox{\parbox{0.81\textwidth}{#1}}}
+   \end{center}
+}
 
 \newenvironment{codeboxed}[1]
         {\begin{minipage}{\linewidth}\begin{center}#1\\[1ex]\begin{tabular}{|p{\textwidth}|}\hline}
