changed Institute and Logo inclusion

--- a/template_tex/setup.tex
+++ b/template_tex/setup.tex
@@ -17,8 +17,9 @@
 % \date{12. Juli 2019}
 
 
-\institute{Karlsruhe Institute of Technology}
-\titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2cm]{Logo_KIT}}
+\institute{Add Your Institute here}
+% \titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2cm]{Logo_INST}}
+\titlegraphic{\vspace{4cm} \hspace{7cm} \Huge\LaTeX}
 
 \iftwocols
 \AtBeginSection[]
