make both present and handout version pdfs
* Adapted makefile to create multiple PDFs
* Added Slides showing the differences in handout mode
* Renaming slides showing exemplary beamer behaviour to make it clear
what they show
* split main.tex in two main_* files, more are possible and require
little change
* both will be compiled to a main_*.pdf, with their respective content
* 'make' now defaults to creating 'handout' mode only
* 'make all' also creates the 'main_present.pdf'
* made so that `cp` (and thus make) does not throw an error when source
file (e.g.  main_present.pdf) does not exist

--- a/template_tex/main.tex
+++ b/template_tex/main.tex
@@ -1,4 +1,3 @@
-\documentclass[12pt,compress,ngerman,english,utf8,t,usenames,dvipsnames]{beamer}
 \usepackage[ngerman, english]{babel}
 
 
@@ -6,7 +5,7 @@
 \author{Felix Karg}
 
 
-\graphicspath{ {../template/} {./graphics} {../template_tex/} } % add further graphics paths here
+\graphicspath{ {./img/} {../template/} {../template_tex/} } % add further graphics paths here
 
 \newif\iftwocols
 \twocolsfalse
