--- a/template_tex/main.tex
+++ b/template_tex/main.tex
@@ -26,7 +26,16 @@
 % \fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{chapters/introduction}
+\include{chapters/introduction}
+% '\include'
+% - gives speed bonus when building, through caching in a seperate *.aux file
+% - has a 'page break'
+% - cannot be nested
+% ------------- VS -------------
+% '\input'
+% - can be nested
+% - does not have 'page breaks'
+% - gives no caching benefit
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
