[template] also include setup and additional

--- a/template_tex/main.tex
+++ b/template_tex/main.tex
@@ -11,7 +11,7 @@
 \twocolsfalse
 % \twocolstrue
 
-\input{setup}
+\include{setup}
 
 
 
@@ -50,6 +50,6 @@
 \bibliography{references.bib}
 \end{frame}
 
-\input{chapters/additional}
+\include{chapters/additional}
 
 \end{document}
