[longtermplans] Improve introduction and starting

--- a/longtermplans/main.tex
+++ b/longtermplans/main.tex
@@ -26,9 +26,9 @@
 % \fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\include{chapters/introduction}
-\include{chapters/starting_point}
-% \include{chapters/setting_goals}
+% \include{chapters/introduction}
+% \include{chapters/starting_point}
+\include{chapters/setting_goals}
 % \include{chapters/planning}
 % \include{chapters/execution}
 % \include{chapters/conclusion}
