--- a/longtermplans/references.bib
+++ b/longtermplans/references.bib
@@ -34,9 +34,15 @@
 }
 
 @misc{longtermplans-post,
-    title = {Goal Setting Workshop},
+    title = {Goal Setting Workshop (Post)},
     author = {Felix Karg},
     howpublished = {\url{https://fkarg.github.io/staged/longtermplans/}}
+}
+
+@misc{longtermplans-pdf,
+    title = {Goal Setting Workshop (Präsentation)},
+    author = {Felix Karg},
+    howpublished = {\url{https://github.com/fkarg/things-to-talk-about/blob/master/longtermplans/main_handout.pdf}}
 }
 
 @misc{forgetting-pic,
