--- a/longtermplans/setup.tex
+++ b/longtermplans/setup.tex
@@ -4,6 +4,7 @@
 \usepackage[export]{adjustbox}
 \usepackage{multicol}
 \usepackage{pdfpcnotes}
+\usepackage{pdfpages}
 % \usepackage[dvipsnames]{xcolor}
 
 
