[longtermplans] set date

--- a/longtermplans/setup.tex
+++ b/longtermplans/setup.tex
@@ -15,7 +15,7 @@
 \usetheme[numbering=fraction, progressbar=frametitle]{metropolis}
 
 
-\date{\today}
+\date{December 29, 2020}
 % \date{12. Juli 2019}
 
 
