[longtermplans] made progress
* basically finished setting-goals-part
* started with planning part
* removed exclamation marks from 'action'-slides in starting point
* added pictures and references

--- a/longtermplans/references.bib
+++ b/longtermplans/references.bib
@@ -50,6 +50,18 @@
     howpublished = {\url{https://thepeakperformancecenter.com/educational-learning/learning/memory/forgetting/}}
 }
 
+
+@misc{plan-reality-pic-2,
+    title = {Big Data Science: Expectations vs. Reality},
+    howpublished = {\url{https://www.pinterest.com/pin/569705421598705552/}}
+}
+
+@misc{lifepath-pic,
+    title = {Lifepath},
+    author = {Aly Juma},
+    howpublished = {\url{https://alyjuma.com/wp-content/uploads/2016/10/lifepath.jpg}}
+}
+
 % [gtd-book]: https://en.wikipedia.org/wiki/Getting_Things_Done
 % [gtd-review]: ../2020-07-16-getting-things-done/
 % [pomodoro]: https://en.wikipedia.org/wiki/Pomodoro_Technique
