[longtermplans] update artifacts

--- a/longtermplans/main.tex
+++ b/longtermplans/main.tex
@@ -8,8 +8,8 @@
 \graphicspath{ {./img/} {../template/} {../template_tex/} } % add further graphics paths here
 
 \newif\iftwocols
-\twocolsfalse
-% \twocolstrue
+% \twocolsfalse
+\twocolstrue
 
 \include{setup}
 
@@ -26,8 +26,8 @@
 % \fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \include{chapters/introduction}
-% \include{chapters/starting_point}
+\include{chapters/introduction}
+\include{chapters/starting_point}
 \include{chapters/setting_goals}
 % \include{chapters/planning}
 % \include{chapters/execution}
@@ -48,7 +48,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOURCES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\section{Quellen}
 \begin{frame}[c,fragile,allowframebreaks]{Quellen}
 % \bibliographystyle{plainnat}
 \bibliographystyle{ieeetr}
