[longtermplans] fix frame numbers with standout

--- a/longtermplans/setup.tex
+++ b/longtermplans/setup.tex
@@ -72,6 +72,8 @@
 
 \maketitle
 
+\addtocounter{framenumber}{1}
+
 % multicols from:
 % https://tex.stackexchange.com/questions/24343/splitting-toc-into-two-columns-on-single-frame-in-beamer
 
