--- a/longtermplans/setup.tex
+++ b/longtermplans/setup.tex
@@ -22,6 +22,17 @@
 % \titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2cm]{Logo_INST}}
 % \titlegraphic{\vspace{4cm} \hspace{7cm} \Huge\LaTeX}
 
+\makeatletter
+\patchcmd{\beamer@sectionintoc}
+  {\vfill}
+  {\vskip0\itemsep}
+  {}
+  {}
+\pretocmd{\beamer@sectionintoc}   {\vskip0\itemsep}{}{}
+\patchcmd{\beamer@sectionintoc}{\vskip1.5em}{\vskip0.5em}{}{} % <- this one finally works.
+\makeatother
+
+
 \iftwocols
 \AtBeginSection[]
 {
@@ -29,16 +40,29 @@
   \begin{minipage}{22em}
     \usebeamercolor[fg]{section title}
     \usebeamerfont{section title}
-    \insertsectionhead\\[-1ex]
-    % \begin{multicols}{2}
-    % \tableofcontents[sectionstyle=show/hide,subsectionstyle=hide/hide/hide]
-    % \tableofcontents[currentsection, hideallsubsections]
-    % \end{multicols}
-    \usebeamertemplate*{progress bar in section page}
+    % \insertsectionhead\\[-1ex]
+    \begin{multicols}{2}
+    \tableofcontents[currentsection, hideallsubsections]
+    \end{multicols}
+    % \usebeamertemplate*{progress bar in section page}
   \end{minipage}
 \end{frame}
-
 }
+\else
+\AtBeginSection[]
+{
+\begin{frame}[c, plain]
+  \begin{minipage}{22em}
+    \usebeamercolor[fg]{section title}
+    \usebeamerfont{section title}
+    % \insertsectionhead\\[-1ex]
+    \tableofcontents[currentsection, hideallsubsections]
+    % \usebeamertemplate*{progress bar in section page}
+  \end{minipage}
+\end{frame}
+}
+
+\fi
 
 \AtBeginSubsection[]
 {
@@ -64,28 +88,6 @@
 \end{frame}
 }
 
-\else
-
-\AtBeginSection[]
-{
-    \large
-    \begin{frame}{Agenda}
-        \tableofcontents[currentsection]
-        \clearpage
-    \end{frame}
-}
-
-\AtBeginSubsection[]
-{
-    \large
-    \begin{frame}{Agenda}
-        \tableofcontents[currentsection,currentsubsection]
-        \clearpage
-    \end{frame}
-}
-\fi
-
-
 \begin{document}
 
 \maketitle
@@ -98,23 +100,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \iftwocols
-\begin{frame}{Agenda}
-    \large
-    \bfseries
+
+\begin{frame}[c,plain]% {Agenda}
+    \begin{minipage}{22em}
+    \usebeamerfont{section title}
+    \usebeamercolor[fg]{section title}
     \begin{multicols}{2}
-        \tableofcontents[hidesubsections]
-%        \tableofcontents[]
+    \tableofcontents[hideallsubsections]
+%   \tableofcontents[]
     \end{multicols}
+    \end{minipage}
     % \clearpage
 \end{frame}
 
 \else
 
-\begin{frame}{Agenda}
-    \large
-    \bfseries
-%   \tableofcontents[hidesubsections]
-    \tableofcontents[]
+\begin{frame}[c,plain]% {Agenda}
+    \begin{minipage}{22em}
+    \usebeamerfont{section title}
+    \usebeamercolor[fg]{section title}
+    \tableofcontents[hideallsubsections]
+%   \tableofcontents[]
+    \end{minipage}
     % \clearpage
 \end{frame}
 \fi
