--- a/template_tex/setup.tex
+++ b/template_tex/setup.tex
@@ -1,16 +1,17 @@
-
 \usepackage{etex}
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 \usepackage{multicol}
 \usepackage{pdfpcnotes}
+\usepackage{pdfpages}
+% \usepackage[dvipsnames]{xcolor}
 
 
-\usepackage{minted}
-\usemintedstyle{pastie}
+% \usepackage{minted}
+% \usemintedstyle{pastie}
 
 
-\usetheme[numbering=fraction, progressbar=frametitle]{metropolis}
+\usetheme[numbering=counter, progressbar=frametitle, subsectionpage=progressbar]{metropolis}
 
 
 \date{\today}
@@ -21,79 +22,102 @@
 % \titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2cm]{Logo_INST}}
 \titlegraphic{\vspace{4cm} \hspace{7cm} \Huge\LaTeX}
 
+% attempt to reduce space between tableofcontent items in e.g. sectionpage or agenda
+\makeatletter
+\patchcmd{\beamer@sectionintoc}
+  {\vfill}
+  {\vskip0\itemsep}
+  {}
+  {}
+\pretocmd{\beamer@sectionintoc}   {\vskip0\itemsep}{}{}
+\patchcmd{\beamer@sectionintoc}{\vskip1.5em}{\vskip0.5em}{}{} % <- this one finally works.
+\makeatother
+
+% \AtBeginSection[]
+% {
+% \begin{frame}[c, plain]
+%   \begin{minipage}{22em}
+%     \usebeamercolor[fg]{section title}
+%     \usebeamerfont{section title}
+%
+%     % \insertsectionhead\\[-1ex]
+%     \iftwocols
+%     \begin{multicols}{2}
+%     \tableofcontents[currentsection, hideallsubsections]
+%     \end{multicols}
+%     \else
+%     \tableofcontents[currentsection, hideallsubsections]
+%     \fi
+%
+%     % \usebeamertemplate*{progress bar in section page}
+%   \end{minipage}
+% \end{frame}
+% }
+% sadly, this does not at all compile and throws weird errors
+
+
 \iftwocols
 \AtBeginSection[]
 {
-    \large
-    \begin{frame}{Content}
-        \begin{multicols}{2}
-            \tableofcontents[currentsection]
-        \end{multicols}
-        \clearpage
-    \end{frame}
-}
-
-\AtBeginSubsection[]
-{
-    \large
-    \begin{frame}{Content}
-        \begin{multicols}{2}
-            \tableofcontents[currentsection,currentsubsection]
-        \end{multicols}
-        \clearpage
-    \end{frame}
-}
-
-\else
-
-\AtBeginSection[]
-{
-    \large
-    \begin{frame}{Content}
-        \tableofcontents[currentsection]
-        \clearpage
-    \end{frame}
-}
-
-\AtBeginSubsection[]
-{
-    \large
-    \begin{frame}{Content}
-        \tableofcontents[currentsection,currentsubsection]
-        \clearpage
-    \end{frame}
-}
-\fi
-
-
-\begin{document}
-
-\maketitle
-
-% multicols from:
-% https://tex.stackexchange.com/questions/24343/splitting-toc-into-two-columns-on-single-frame-in-beamer
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\iftwocols
-\begin{frame}{Content}
-    \large
+\begin{frame}[c, plain]
+  \begin{minipage}{22em}
+    \usebeamercolor[fg]{section title}
+    \usebeamerfont{section title}
+    % \insertsectionhead\\[-1ex]
     \begin{multicols}{2}
-%        \tableofcontents[hidesubsections]
-        \tableofcontents[]
+    \tableofcontents[currentsection, hideallsubsections]
     \end{multicols}
-    % \clearpage
+    % \usebeamertemplate*{progress bar in section page} % progress bar
+  \end{minipage}
 \end{frame}
-
+}
 \else
 
-\begin{frame}{Content}
-    \large
-%   \tableofcontents[hidesubsections]
-    \tableofcontents[]
-    % \clearpage
+\AtBeginSection[]
+{
+\begin{frame}[c, plain]
+  \begin{minipage}{22em}
+    \usebeamercolor[fg]{section title}
+    \usebeamerfont{section title}
+    % \insertsectionhead\\[-1ex]
+    \tableofcontents[currentsection, hideallsubsections]
+    % \usebeamertemplate*{progress bar in section page}
+  \end{minipage}
 \end{frame}
+}
 \fi
+
+\AtBeginSubsection[]
+{
+\begin{frame}[c,plain]
+  \begin{minipage}{22em}
+    \raggedright
+    \usebeamercolor[fg]{section title}
+    \usebeamerfont{section title}
+    \insertsectionhead\\[-1ex]
+
+    \usebeamertemplate*{progress bar in section page}
+    \par
+    \ifx\insertsubsectionhead\@empty\else%
+      \usebeamercolor[fg]{subsection title}%
+      \usebeamerfont{subsection title}%
+      \vspace{0.5cm}
+      \tableofcontents[sectionstyle=hide/hide,subsectionstyle=show/shaded/hide]
+    \fi
+  \end{minipage}
+\end{frame}
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Newcommand definitions
+% - code[1]
+% - backupbegin
+% - backupend
+% - mailto[1]
+% - todo[1]
+% Environments:
+% - codeboxed[1]
 
 
 \newcommand{\code}[1]{
@@ -126,3 +150,64 @@
 \newcommand{\todo}[1]{
     {\Large\color{red}{(TODO: #1)}}
 }
+
+% \definecolor{green1}{RGB}{38, 69, 37} % #264525
+\definecolor{green1}{RGB}{72, 129, 69} % #488145
+% \definecolor{blue1}{RGB}{7, 43, 94} % #072b5e
+\definecolor{blue1}{RGB}{14, 82, 179} % #0e52b3
+% \definecolor{violet1}{RGB}{58, 38, 68} % #3a2644
+\definecolor{violet1}{RGB}{108, 72, 126} % #6c487e
+% \definecolor{orang1}{RGB}{, , 0} % #663400
+\definecolor{orang1}{RGB}{193, 98, 0} % #c16200
+
+
+\newcommand{\green}[1]{
+    \textcolor{green1}{#1}
+}
+\newcommand{\blue}[1]{
+    \textcolor{blue1}{#1}
+}
+\newcommand{\vio}[1]{
+    \textcolor{violet1}{#1}
+}
+\newcommand{\orang}[1]{
+    \textcolor{orang1}{#1}
+}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% begin document
+
+\begin{document}
+\maketitle
+\addtocounter{framenumber}{1}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Agenda
+
+\iftwocols
+
+\begin{frame}[c,plain]% {Agenda}
+    \begin{minipage}{22em}
+    \usebeamerfont{section title}
+    \usebeamercolor[fg]{section title}
+    \begin{multicols}{2}
+    \tableofcontents[hideallsubsections]
+%   \tableofcontents[]
+    \end{multicols}
+    \end{minipage}
+\end{frame}
+
+\else
+
+\begin{frame}[c,plain]% {Agenda}
+    \begin{minipage}{22em}
+    \usebeamerfont{section title}
+    \usebeamercolor[fg]{section title}
+    \tableofcontents[hideallsubsections]
+%   \tableofcontents[]
+    \end{minipage}
+\end{frame}
+\fi
