--- a/longtermplans/references.bib
+++ b/longtermplans/references.bib
@@ -15,7 +15,7 @@
 @misc{crisis-pic,
     title = {What should entrepreneurs do when they encounter a crisis?},
     howpublished = {\url{http://elitebusinessmagazine.co.uk/sales-marketing/item/what-should-startups-do-when-they-encounter-a-crisis}},
-    Note = {accessed 2020-12-19}
+    note = {accessed 2020-12-19, CC 3.0, unchanged}
 }
 
 @misc{trigger-list,
@@ -42,24 +42,55 @@
 @misc{longtermplans-pdf,
     title = {Goal Setting Workshop (Präsentation)},
     author = {Felix Karg},
-    howpublished = {\url{https://github.com/fkarg/things-to-talk-about/blob/master/longtermplans/main_handout.pdf}}
+    howpublished = {\url{https://github.com/fkarg/things-to-talk-about/blob/master/longtermplans/main_handout.pdf}},
 }
 
 @misc{forgetting-pic,
     title = {Forgetting},
-    howpublished = {\url{https://thepeakperformancecenter.com/educational-learning/learning/memory/forgetting/}}
+    howpublished = {\url{https://thepeakperformancecenter.com/educational-learning/learning/memory/forgetting/}},
+    note = {accessed 2020-12-19, CC 3.0, unchanged}
 }
 
 
 @misc{plan-reality-pic-2,
     title = {Big Data Science: Expectations vs. Reality},
-    howpublished = {\url{https://www.pinterest.com/pin/569705421598705552/}}
+    howpublished = {\url{https://www.pinterest.com/pin/569705421598705552/}},
+    note = {accessed 2020-12-19, CC 3.0, unchanged}
 }
 
 @misc{lifepath-pic,
     title = {Lifepath},
     author = {Aly Juma},
-    howpublished = {\url{https://alyjuma.com/wp-content/uploads/2016/10/lifepath.jpg}}
+    howpublished = {\url{https://alyjuma.com/wp-content/uploads/2016/10/lifepath.jpg}},
+    note = {accessed 2020-12-19, CC 3.0, unchanged}
+}
+
+@misc{unclear-goals-pic,
+    title = {Behaviour Gap},
+    howpublished = {\url{https://prosperiguide.com/retirement/plan-for-retirement/how-to-wreck-your-finances-in-10-easy-steps?survey=true}},
+    note = {accessed 2020-12-19, CC 3.0, unchanged}
+}
+
+@misc{dependency-pic,
+    title = {Dependency},
+    author = {Knut M. Synstad},
+    howpublished = {\url{https://thenounproject.com/term/dependency/1340837/}},
+    note = {accessed 2020-12-19, CC 3.0, unchanged}
+}
+
+@misc{weight-pic,
+    title = {Biohacking Lighgt},
+    author = {Andrej Karpathy},
+    year = 2020,
+    howpublished = {\url{https://karpathy.github.io/2020/06/11/biohacking-lite/}},
+    note = {accessed 2020-12-19, CC 3.0 unchanged}
+}
+
+@misc{weight-loss-pic,
+    title = {How to achieve your weight loss goals},
+    year = 2013,
+    howpublished = {\url{https://commons.wikimedia.org/wiki/File:How_to_achieve_your_weight_loss_goals.jpg}},
+    note = {accessed 2020-12-19, CC 2.0 unchanged}
 }
 
 % [gtd-book]: https://en.wikipedia.org/wiki/Getting_Things_Done
