--- a/longtermplans/main.tex
+++ b/longtermplans/main.tex
@@ -29,9 +29,10 @@
 \include{chapters/introduction}
 \include{chapters/starting_point}
 \include{chapters/setting_goals}
-% \include{chapters/planning}
-% \include{chapters/execution}
-% \include{chapters/conclusion}
+\include{chapters/planning}
+\include{chapters/execution} % could use expansion
+\include{chapters/conclusion} % finished?
+% \include{chapters/example}
 % '\include'
 % - gives speed bonus when building, through caching in a seperate *.aux file
 % - has a 'page break'
