--- a/longtermplans/references.bib
+++ b/longtermplans/references.bib
@@ -67,7 +67,7 @@
 
 @misc{unclear-goals-pic,
     title = {Behaviour Gap},
-    howpublished = {\url{https://prosperiguide.com/retirement/plan-for-retirement/how-to-wreck-your-finances-in-10-easy-steps?survey=true}},
+    howpublished = {\url{https://prosperiguide.com/retirement/plan-for-retirement/how-to-wreck-your-finances-in-10-easy-steps}},
     note = {accessed 2020-12-19, CC 3.0, unchanged}
 }
 
@@ -88,6 +88,7 @@
 
 @misc{weight-loss-pic,
     title = {How to achieve your weight loss goals},
+    author = {Wikimedia},
     year = 2013,
     howpublished = {\url{https://commons.wikimedia.org/wiki/File:How_to_achieve_your_weight_loss_goals.jpg}},
     note = {accessed 2020-12-19, CC 2.0 unchanged}
