[longtermplans] significant progress

--- a/longtermplans/references.bib
+++ b/longtermplans/references.bib
@@ -36,7 +36,7 @@
 @misc{longtermplans-post,
     title = {Goal Setting Workshop (Post)},
     author = {Felix Karg},
-    howpublished = {\url{https://fkarg.github.io/staged/longtermplans/}}
+    howpublished = {\url{https://fkarg.github.io/2020-12-29-longtermplans/}}
 }
 
 @misc{longtermplans-pdf,
@@ -92,6 +92,41 @@
     year = 2013,
     howpublished = {\url{https://commons.wikimedia.org/wiki/File:How_to_achieve_your_weight_loss_goals.jpg}},
     note = {accessed 2020-12-19, CC 2.0 unchanged}
+}
+
+@misc{steak-pic,
+    title = {Steak Frites with Bordelaise Sauce},
+    author = {Davidwbaker, Wikimedia},
+    year = 2020,
+    howpublished = {\url{Davidwbaker, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons}},
+    note = {accessed 2020-12-19, CC BY-SA 4.0 unchanged}
+}
+
+@misc{writing-pic,
+    title = {Write Your Own Short-Story},
+    howpublished = {\url{https://ndla.no/subject:17/topic:1:184557/resource:1:92368?filters=urn:filter:41cb93c0-abc7-4212-b69f-df81106ae3c0}},
+    note = {accessed 2020-12-19, CC0 unchanged}
+}
+
+@book{gtd-book,
+  title     = "Getting Things Done - the art of stress-free productivity",
+  author    = "Allen, David",
+  year      = 2001,
+  publisher = "Penguin Books"
+}
+
+@book{4h-workweek,
+  title     = "The 4-Hour Workweek — Escape 9–5, Live Anywhere, and Join the New Rich",
+  author    = "Timothy Ferris",
+  year      = 2007,
+  publisher = "Crown Publishing Group"
+}
+
+@book{goalboss,
+  title     = "Goalboss - The Art \& Science of Getting Stuff Done",
+  author    = "Will Pemble",
+  year      = 2018,
+  publisher = "Croc Smile Press"
 }
 
 % [gtd-book]: https://en.wikipedia.org/wiki/Getting_Things_Done
