[longtermplans] activate progress bar on sections

--- a/longtermplans/setup.tex
+++ b/longtermplans/setup.tex
@@ -68,7 +68,7 @@
     \begin{multicols}{2}
     \tableofcontents[currentsection, hideallsubsections]
     \end{multicols}
-    % \usebeamertemplate*{progress bar in section page} % progress bar
+    \usebeamertemplate*{progress bar in section page} % progress bar
   \end{minipage}
 \end{frame}
 }
@@ -226,6 +226,7 @@
     \tableofcontents[hideallsubsections]
 %   \tableofcontents[]
     \end{multicols}
+    \usebeamertemplate*{progress bar in section page} % progress bar
     \end{minipage}
 \end{frame}
 
