--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -27,6 +27,13 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{chapters/introduction}
+\include{chapters/why-problem}
+\include{chapters/necessary}
+\include{chapters/aging}
+\include{chapters/slow-aging}
+\include{chapters/personal-strategies}
+\include{chapters/bioinformatics}
+
 % '\include'
 % - gives speed bonus when building, through caching in a seperate *.aux file
 % - has a 'page break'
@@ -50,6 +57,6 @@
 \bibliography{references.bib}
 \end{frame}
 
-\include{chapters/additional}
+% \include{chapters/additional}
 
 \end{document}
