[anti-aging] started adding sources and pictures

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -1,6 +1,103 @@
-@misc{benchcpp,
-    title = {Rust comparison with C++},
-    year = 2019,
-    howpublished = {\url{https://benchmarksgame-team.pages.debian.net/benchmarksgame/fastest/rust-gpp.html}},
-    Note = {accessed 2019-06-26}
+@misc{AntiAgin75:online,
+author = {JackH},
+title = {Anti-Aging: State of the Art - LessWrong},
+howpublished = {\url{https://www.lesswrong.com/posts/RcifQCKkRc9XTjxC2/anti-aging-state-of-the-art}},
+month = {12},
+year = {2020},
+note = {(Accessed on 2021-05-24)}
+}
+
+@article{10.1111/acel.13230,
+author={Santesmasses, Didac and Castro, Jos{\'e} Pedro and Zenin, Aleksandr A and Shindyapina, Anastasia V and Gerashchenko, Maxim V and Zhang, Bohan and Kerepesi, Csaba and Yim, Sun Hee and Fedichev, Peter O and Gladyshev, Vadim N},
+title = {COVID-19 is an emergent disease of aging},
+journal = {Aging Cell},
+volume = {19},
+number = {10},
+pages = {e13230},
+keywords = {age-related diseases, COVID-19, gene expression, lifespan, pneumonia, viral infection},
+doi = {https://doi.org/10.1111/acel.13230},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/acel.13230},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/acel.13230},
+abstract = {Abstract COVID-19 is an ongoing pandemic caused by the SARS-CoV-2 coronavirus that poses one of the greatest challenges to public health in recent years. SARS-CoV-2 is known to preferentially target older subjects and those with pre-existing conditions, but the reason for this age dependence is unclear. Here, we found that the case fatality rate for COVID-19 grows exponentially with age in all countries tested, with the doubling time approaching that of all-cause human mortality. In addition, men and those with multiple age-related diseases are characterized by increased mortality. Moreover, similar mortality patterns were found for all-cause pneumonia. We further report that the gene expression of ACE2, the SARS-CoV-2 receptor, grows in the lung with age, except for subjects on a ventilator. Together, our findings establish COVID-19 as an emergent disease of aging, and age and age-related diseases as its major risk factors. In turn, this suggests that COVID-19, and deadly respiratory diseases in general, may be targeted, in addition to antiviral approaches, by approaches that target the aging process.},
+year = {2020}
+}
+
+@article{lopez2013hallmarks,
+  title={The hallmarks of aging},
+  author={L{\'o}pez-Ot{\'\i}n, Carlos and Blasco, Maria A and Partridge, Linda and Serrano, Manuel and Kroemer, Guido},
+  journal={Cell},
+  volume={153},
+  number={6},
+  pages={1194--1217},
+  year={2013},
+  publisher={Elsevier}
+}
+
+
+@article{10.1093/ppar/prz022,
+    author = {Kaeberlein, Matt},
+    title = "{It is Time to Embrace 21st-Century Medicine}",
+    journal = {Public Policy \& Aging Report},
+    volume = {29},
+    number = {4},
+    pages = {111-115},
+    year = {2019},
+    month = {10},
+    abstract = "{Biomedical research and clinical practice have traditionally been focused on disease rather than health. We typically wait until people are sick before trying to cure their disease or alleviate their symptoms, rather than actively supporting health and wellbeing in the absence of disease. Current demographic trends toward older populations make this approach problematic. Instead of improving the quality of life, we may be extending the period of morbidity and frailty for millions of people. Twenty-first century medicine should adopt the strategy of directly targeting the molecular mechanisms that cause biological aging. Only in this way will it be possible to slow the onset and progression of multiple age-related diseases simultaneously, in order to extend the healthspan proportionately with the lifespan.}",
+    issn = {1055-3037},
+    doi = {10.1093/ppar/prz022},
+    url = {https://doi.org/10.1093/ppar/prz022},
+    eprint = {https://academic.oup.com/ppar/article-pdf/29/4/111/30130967/prz022.pdf},
+}
+
+@misc{Greenlan67:online,
+author = {Elizabeth Pennisi},
+title = {Greenland shark may live 400 years, smashing longevity record | Science | AAAS},
+howpublished = {\url{https://www.sciencemag.org/news/2016/08/greenland-shark-may-live-400-years-smashing-longevity-record#:~:text=Greenland%20shark%20may%20live%20400%20years%2C%20smashing%20longevity%20record,-By%20Elizabeth%20Pennisi&text=Imagine%20having%20to%20wait%20a,by%20at%20least%20a%20century.}},
+month = {08},
+year = {2016},
+note = {(Accessed on 2021-05-24)}
+}
+
+@article{martinez1998mortality,
+  title={Mortality patterns suggest lack of senescence in hydra},
+  author={Mart{\i}nez, Daniel E},
+  journal={Experimental gerontology},
+  volume={33},
+  number={3},
+  pages={217--225},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{munro2012extreme,
+  title={The extreme longevity of Arctica islandica is associated with increased peroxidation resistance in mitochondrial membranes},
+  author={Munro, Daniel and Blier, Pierre U},
+  journal={Aging cell},
+  volume={11},
+  number={5},
+  pages={845--855},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{ruby2018naked,
+  title={Naked mole-rat mortality rates defy Gompertzian laws by not increasing with age},
+  author={Ruby, J Graham and Smith, Megan},
+  journal={elife},
+  volume={7},
+  pages={e31157},
+  year={2018},
+  publisher={eLife Sciences Publications Limited}
+}
+
+@article{miller2001escaping,
+  title={Escaping senescence: demographic data from the three-toed box turtle (Terrapene carolina triunguis)},
+  author={Miller, JK},
+  journal={Experimental Gerontology},
+  volume={36},
+  number={4-6},
+  pages={829--832},
+  year={2001},
+  publisher={Elsevier}
 }
