--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -26,13 +26,13 @@
 % \fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\include{chapters/introduction}
-\include{chapters/why-problem}
+% \include{chapters/introduction}
+% \include{chapters/why-problem}
 \include{chapters/necessary}
-\include{chapters/aging}
-\include{chapters/slow-aging}
-\include{chapters/personal-strategies}
-\include{chapters/bioinformatics}
+% \include{chapters/aging}
+% \include{chapters/slow-aging}
+% \include{chapters/personal-strategies}
+% \include{chapters/bioinformatics}
 
 % '\include'
 % - gives speed bonus when building, through caching in a seperate *.aux file
@@ -52,8 +52,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOURCES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[c,fragile,allowframebreaks]{Sources}
-% \bibliographystyle{plainnat}
-\bibliographystyle{ieeetr}
+\bibliographystyle{plainnat}
+% \bibliographystyle{ieeetr}
 \bibliography{references.bib}
 \end{frame}
 
